Rework user-agents and use compression when possible